src/renderer/html/tests/snapshots/ferromark__renderer__html__tests__blocks__render_inline_toc_honors_max_depth.snap
---
source: src/renderer/html/tests/blocks.rs
expression: html
---
<nav class="ox-toc" aria-label="Table of contents">
<ul>
<li class="ox-toc__item ox-toc__item--depth-1"><a href="#title">Title</a></li>
<li class="ox-toc__item ox-toc__item--depth-2"><a href="#intro">Intro</a></li>
</ul>
</nav>
<h1 id="title">Title</h1>
<h2 id="intro">Intro</h2>
<h3 id="api">API</h3>
