src/renderer/html/tests/snapshots/ferromark__renderer__html__tests__blocks__render_inline_toc_uses_unique_and_unicode_ids.snap
---
source: src/renderer/html/tests/blocks.rs
assertion_line: 171
expression: html
---
<nav class="ox-toc" aria-label="Table of contents">
<ul>
<li class="ox-toc__item ox-toc__item--depth-2"><a href="#setup">Setup</a></li>
<li class="ox-toc__item ox-toc__item--depth-2"><a href="#setup-1">Setup</a></li>
<li class="ox-toc__item ox-toc__item--depth-2"><a href="#%E3%81%AF%E3%81%98%E3%82%81%E3%81%AB">はじめに</a></li>
</ul>
</nav>
<h2 id="setup">Setup</h2>
<h2 id="setup-1">Setup</h2>
<h2 id="はじめに">はじめに</h2>
